--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 # BlueJ files
 *.ctxt
 
+#idea files
+.idea
+spring-beans.iml
+
+#gitignore
+.gitignore
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
